--- a/hurricanehackers/hurricanedonate/templates/donate/index.html
+++ b/hurricanehackers/hurricanedonate/templates/donate/index.html
@@ -6,6 +6,10 @@
 
 <img src="https://i.imgur.com/caGKUp4.png" alt="Donator Form Image" width=100% height=100%>
 
+<a class="btn btn-dark" href="{% url 'donateposts:index' %}" style='position:absolute; margin-left:175px; margin-top:-100px;'>
+    Post</a
+    >
+
 </body>
 </html>
 
