--- a/hurricanehackers/hurricanedonate/templates/pages/index.html
+++ b/hurricanehackers/hurricanedonate/templates/pages/index.html
@@ -6,5 +6,10 @@
 
 <img src="https://i.imgur.com/aELeBoB.png" alt="Home Page Image" width=100% height=100%>
 
+<a class="btn btn-dark" href="{% url 'registration:index' %}" style='position:absolute; margin-left:800px; margin-top:-650px;'>
+    Register</a
+    >
+
+
 </body>
 </html>
