added pages and images for the pages

--- a/hurricanehackers/hurricanedonate/templates/donate/index.html
+++ b/hurricanehackers/hurricanedonate/templates/donate/index.html
@@ -1,4 +1,12 @@
-{% extends 'base.html' %}
-{% block content %}
-    DONATE
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head> Donators Form </head>
+<body>
+
+
+<img src="https://i.imgur.com/caGKUp4.png" alt="Donator Form Image" width=100% height=100%>
+
+</body>
+</html>
+
+
