--- a/hurricanehackers/hurricanedonate/templates/hurricanedonate/index.html
+++ b/hurricanehackers/hurricanedonate/templates/hurricanedonate/index.html
@@ -1,5 +1,10 @@
-{% extends 'base.html' %}
-{% block content %}
-    NEED
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head> Need Form </head>
+<body>
 
+
+<img src="https://i.imgur.com/1xGZW2U.png" alt="Donator Form Image" width=100% height=100%>
+
+</body>
+</html>
