--- a/hurricanehackers/hurricanedonate/templates/pages/index.html
+++ b/hurricanehackers/hurricanedonate/templates/pages/index.html
@@ -1,25 +1,10 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+<head>  </head>
+<body>
 
-{% block content %}
 
+<img src="https://i.imgur.com/aELeBoB.png" alt="Home Page Image" width=100% height=100%>
 
-
-<div class="card text-center">
-
-  <div class="card-body">
-
-    <h1>Welcome To Pollster</h1>
-
-    <p>This is an example Django polling app</p>
-
-    <a class="btn btn-dark" href="{% url 'polls:index' %}">
-
-        View Available Polls</a
-
-      >
-
-  </div>
-
-  </div>
-
-{% endblock %}
+</body>
+</html>
