--- a/hurricanehackers/hurricanedonate/templates/registration/index.html
+++ b/hurricanehackers/hurricanedonate/templates/registration/index.html
@@ -6,5 +6,13 @@
 
 <img src="https://i.imgur.com/fhfes7E.png" alt="Home Page Image" width=100% height=100%>
 
+<a class="btn btn-dark" href="{% url 'need:index' %}" style='position:absolute; margin-left:300px; margin-top:-128px;'>
+    Need</a
+  >
+
+<a class="btn btn-dark" href="{% url 'donate:index' %}" style='position:absolute; margin-left:450px; margin-top:-128px;'>
+    Supply</a
+  >
+
 </body>
 </html>
