worked on form text input and linking pages together

--- a/hurricanehackers/hurricanedonate/templates/donate/index.html
+++ b/hurricanehackers/hurricanedonate/templates/donate/index.html
@@ -6,9 +6,13 @@
 
 <img src="https://i.imgur.com/caGKUp4.png" alt="Donator Form Image" width=100% height=100%>
 
-<a class="btn btn-dark" href="{% url 'donateposts:index' %}" style='position:absolute; margin-left:175px; margin-top:-100px;'>
-    Post</a
-    >
+<form action="/donateposts">
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-600px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-540px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-480px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-420px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-380px;'>
+    <br><input type="submit" value="Post" style='position:absolute; margin-left:225px; margin-top:-100px;'></form>
 
 </body>
 </html>
