--- a/hurricanehackers/hurricanedonate/templates/hurricanedonate/index.html
+++ b/hurricanehackers/hurricanedonate/templates/hurricanedonate/index.html
@@ -6,9 +6,13 @@
 
 <img src="https://i.imgur.com/1xGZW2U.png" alt="Donator Form Image" width=100% height=100%>
 
-<a class="btn btn-dark" href="{% url 'needposts:index' %}" style='position:absolute; margin-left:175px; margin-top:-200px;'>
-    Post</a
-    >
+<form action="/needposts">
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-630px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-570px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-510px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-450px;'>
+    <input type="text" name="textie" style= 'position:absolute; margin-left:675px; margin-top:-390px;'>
+    <br><input type="submit" value="Post" style='position:absolute; margin-left:225px; margin-top:-200px;'></form>
 
 </body>
 </html>
