--- a/hurricanehackers/hurricanedonate/templates/hurricanedonate/index.html
+++ b/hurricanehackers/hurricanedonate/templates/hurricanedonate/index.html
@@ -6,5 +6,9 @@
 
 <img src="https://i.imgur.com/1xGZW2U.png" alt="Donator Form Image" width=100% height=100%>
 
+<a class="btn btn-dark" href="{% url 'needposts:index' %}" style='position:absolute; margin-left:175px; margin-top:-200px;'>
+    Post</a
+    >
+
 </body>
 </html>
