--- a/ReAll/webapp/templates/webapp/home.html
+++ b/ReAll/webapp/templates/webapp/home.html
@@ -11,6 +11,7 @@
 			width: 100%;
 			height: 15%;
 			text-align: center;
+			font-size: 35;
 		}
 
 		#sidebar-left {
@@ -40,7 +41,9 @@
 
 <body>
 
-	<div id="header">Header</div>
+	<div id="header">
+		<h3>ReAll - Connecting neighbors and resources on on one.</h3>
+	</div>
 
 	<div id="sidebar-left">
 		<form id="user-info">
